@@ -7,6 +7,8 @@ Fixes:
 * Fixed Eden's damage, range, and shot speed stats not properly changing
 * The console reimplementation is now more faithful to the original, which fixes some cases where the output color was wrong
 * Pickup:GetCollectibleCycle() length now limited by CycleCollectibleCount
+* Fixed binder for Player:AddBoneOrbital
+* Renamed Player method AddLeprocy -> AddLeprocy
 /newline/
 v1.0.3 - 
 Additions:
